package dmGameObjectDDF;

import "ddf/ddf_extensions.proto";
import "ddf/ddf_math.proto";

option java_package = "com.dynamo.gameobject.proto";
option java_outer_classname = "GameObject";

message ComponentDesc
{
    required string id = 1;
    required string component = 2 [(resource) = true];
}

message EmbeddedComponentDesc
{
    required string id = 1;
    required string type = 2;
    required string data = 3;
}

message PrototypeDesc
{
    repeated ComponentDesc components = 1 [(resource) = true];
    repeated EmbeddedComponentDesc embedded_components = 2;
}

message InstanceDesc
{
    required string         id          = 1;
    required string         prototype   = 2 [(resource) = true];
    repeated string         children    = 3;
    optional dmMath.Point3  position    = 4;
    optional dmMath.Quat    rotation    = 5;
}

message CollectionInstanceDesc
{
    required string         id          = 1;
    required string         collection  = 2 [(resource) = true];
    optional dmMath.Point3  position    = 3;
    optional dmMath.Quat    rotation    = 4;
}

message CollectionDesc
{
    required string                 name                    = 1;
    repeated InstanceDesc           instances               = 2 [(resource) = true];
    repeated CollectionInstanceDesc collection_instances    = 3 [(resource) = true];
}

message AcquireInputFocus
{
    required uint64 game_object_id = 1;
}

message ReleaseInputFocus
{
    required uint64 game_object_id = 1;
}

message GameObjectTransformQuery
{
    required uint64 game_object_id = 1;
}

message GameObjectTransformResult
{
    required uint64         game_object_id  = 1;
    required dmMath.Point3  position        = 2;
    required dmMath.Quat    rotation        = 3;
}

message SetParent
{
    required uint64 child_id    = 1;
    optional uint64 parent_id   = 2 [default = 0];
}
