package dmMath;

import "ddf/ddf_extensions.proto";

option java_package = "com.dynamo.proto";
option java_outer_classname = "DdfMath";
option (ddf_java_package) = "com.dynamo.ddf.math";

option (ddf_includes) = "vectormath/cpp/vectormath_aos.h";

message Point3
{
    option (alias) = "Vectormath::Aos::Point3";

    required float X = 1;
    required float Y = 2;
    required float Z = 3;
    optional float d = 4;
}

message Vector3
{
    option (alias) = "Vectormath::Aos::Vector3";

    required float X = 1;
    required float Y = 2;
    required float Z = 3;
    optional float d = 4;
}


message Vector4
{
    option (alias) = "Vectormath::Aos::Vector4";

    required float X = 1;
    required float Y = 2;
    required float Z = 3;
    required float W = 4;
}

message Quat
{
    option (alias) = "Vectormath::Aos::Quat";

    required float X = 1;
    required float Y = 2;
    required float Z = 3;
    required float W = 4;
}

message Matrix4
{
    option (alias) = "Vectormath::Aos::Matrix4";

    required float M00 = 1;
    required float M01 = 2;
    required float M02 = 3;
    required float M03 = 4;
    required float M10 = 5;
    required float M11 = 6;
    required float M12 = 7;
    required float M13 = 8;
    required float M20 = 9;
    required float M21 = 10;
    required float M22 = 11;
    required float M23 = 12;
    required float M30 = 13;
    required float M31 = 14;
    required float M32 = 15;
    required float M33 = 16;
}
